--- a/la-mia-pizzeria-static/Views/Home/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/Index.cshtml
@@ -1,14 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Pizzeria";
-    Layout = null;
+    Layout = "_Pizzeria";
 }
 
-<head>
+@* <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<div class="text-center">
-    <h1 class="display-4">Welcome to Pizzeria Mammamia</h1>
-</div>
+</head> *@
+
 
 @{
     List<Pizza> pizze = new List<Pizza>();
